--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,6 +20,27 @@
             android:layout_marginBottom="40dp"
             android:id="@+id/tv_collections" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Collection"
+            android:textSize="20dp"
+            android:layout_marginBottom="20dp"
+            android:id="@+id/tv_addCollection" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Collection"
+            android:id="@+id/et_addCollection" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Submit"
+            android:id="@+id/btn_submit" />
+
     </LinearLayout>
 
 </FrameLayout>
